--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>CA DL Sample Test</title>
 
 	<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
@@ -11,7 +12,7 @@
 <body>
 	<div id="container">
 		<div class="row">
-			<div class="col-xs-8 col-xs-offset-2">
+			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<h3>California Driver License Sample Written Test</h3>
 				<div id="quiz">
 				</div>
